--- a/index.html
+++ b/index.html
@@ -15,11 +15,13 @@
     <div id="app">
         <h1>Liste des utilisateurs</h1>
         <p v-if="users !== '' ">Il y a {{ users.length }} inscrits dans l'application</p>
-        <select id="users">
-            <option v-for="user of users" :id="user.id">{{ user.name }}</option>
+        <label for="users">Choisir un utilisateur</label>
+        <select @change="findUser" v-model="userName">
+            <option v-for="user of users">{{ user.name}}</option>
         </select>
-        <user-data></user-data>
-
+        <div>
+             <user-data v-if="user !== ''" :user="user"></user-data>
+        </div>
     </div>
 
 </body>
