--- a/index.html
+++ b/index.html
@@ -13,14 +13,20 @@
 
 <body>
     <div id="app">
-        <h1>Liste des utilisateurs</h1>
+        <h1>Exo Typicode Vuejs</h1>
+        <p><hr></p>
+        <h2>Liste des utilisateurs</h2>
         <p v-if="users !== '' ">Il y a {{ users.length }} inscrits dans l'application</p>
         <label for="users">Choisir un utilisateur</label>
         <select @change="findUser" v-model="userName">
             <option v-for="user of users">{{ user.name}}</option>
         </select>
         <div>
-             <user-data v-if="user !== ''" :user="user"></user-data>
+            <user-data v-if="user !== ''" :user="user"></user-data>
+            <p><hr></p>
+            <button @click="displayTask" v-if="user !== ''">voir les tâches</button>
+            <button v-if="user !== ''">voir les albums</button>
+            <button v-if="user !== ''">voir les articles</button>
         </div>
     </div>
 
