--- a/index.html
+++ b/index.html
@@ -21,12 +21,18 @@
         <select @change="findUser" v-model="userName">
             <option v-for="user of users">{{ user.name}}</option>
         </select>
-        <div>
-            <user-data v-if="user !== ''" :user="user"></user-data>
+        <div v-if="user !== ''">
+            <user-profile  :user="user"></user-profile>
             <p><hr></p>
             <button @click="displayTask" v-if="user !== ''">voir les tâches</button>
-            <button v-if="user !== ''">voir les albums</button>
-            <button v-if="user !== ''">voir les articles</button>
+            <button @click="displayAlbums">voir les albums</button>
+            <button @click="displayArticles">voir les articles</button>
+
+            <!-- <div @change="clearDataDisplayed"> -->
+                <user-task v-if="tasks != '' " :user="user" :tasks="tasks"></user-task>
+                <user-album v-if="albums != '' " :user="user" :albums="albums"></user-album>
+                <user-article v-if="posts != '' ":user="user" :posts="posts"></user-article>
+            <!-- </div> -->
         </div>
     </div>
 
